--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
             font-size: 18px;
             cursor: pointer;
             transition: background-color 0.9s;
+            margin-top: 5%; /* Adjust this value to your preference */
+    margin-bottom: 20%; /* Add margin at the bottom for consistency */
+    animation: fadeIn 1s ease-in-out;
         }
 
         .submit-btn:hover {
